LINK_LIBRARIES(${NETCALC_LINK_LIBRARIES})

FILE(GLOB SAMPLE_SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)

ADD_DEFINITIONS(-DNETSCI_ROOT_DIR="${CMAKE_SOURCE_DIR}")

FOREACH (SAMPLE_SRC_FILE ${SAMPLE_SRC_FILES})
    GET_FILENAME_COMPONENT(SAMPLE_SRC_FILE_NAME ${SAMPLE_SRC_FILE} NAME_WE)
    ADD_EXECUTABLE(${SAMPLE_SRC_FILE_NAME} ${SAMPLE_SRC_FILE})
    TARGET_LINK_LIBRARIES(${SAMPLE_SRC_FILE_NAME} ${NETCALC_LINK_LIBRARIES})
    SET_TARGET_PROPERTIES(${SAMPLE_SRC_FILE_NAME} PROPERTIES
            RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
ENDFOREACH (SAMPLE_SRC_FILE ${SAMPLE_SRC_FILES})

